--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "cron": "^2.0.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
