--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
-  "name": "beans-news-server",
+  "name": "beans-news",
   "version": "1.0.0",
-  "description": "Standalone server for Beans News Shopify integration",
+  "description": "Coffee news aggregation server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start:pm2": "pm2 start server.js --name beans-news",
+    "stop:pm2": "pm2 stop beans-news",
+    "restart:pm2": "pm2 restart beans-news",
+    "startup:pm2": "pm2 startup beans-news",
+    "logs:pm2": "pm2 logs beans-news",
+    "db:connect": "mongo mongodb://localhost:27017/beansnews",
+    "db:backup": "mongodump --uri mongodb://localhost:27017/beansnews --out ./backups/beansnews-$(date +%F)"
   },
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.6.0",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "cron": "^2.0.0",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "mongoose": "^6.9.0",
-    "node-cron": "^3.0.3",
-    "openai": "^4.91.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "mongoose": "^7.0.0",
+    "node-cron": "^3.0.0",
+    "openai": "^4.0.0",
     "rss-parser": "^3.12.0",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston": "^3.8.0",
+    "winston-daily-rotate-file": "^4.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "nodemon": "^3.0.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
